# processamento-linguagem-natural-puc-minas

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: README.md
data/anamnese/: camila-rodrigues-de-almeida.txt  jose-carlos-da-silva.txt
data/old/: maria-fernanda-oliveira-santos.txt
docs/: desenvolvimento.md
simple-rag/: documents.py  embedding.py  load_pdf.py  main.py  ollama_agent.py  ollama_tools.py  vectorstore.py
simple_rag/: __init__.py  cli.py  config.py  logger.py
simple_rag/agents/: __init__.py  llm.py
simple_rag/core/: __init__.py  document_loader.py  text_processor.py  vectorstore.py
simple_rag/tools/: __init__.py  calculator.py  retriever.py
